# WebCamShare

./: .gitignore  README.md  THIRD_PARTY_NOTICES.txt  build.bat  build_debug.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: release.yml
LICENSES/: pywin32-PSF-LICENSE-Python.txt
receiver/: client.py  ui.py  virtual_cam.py
sender/: camera.py  camera_enum_windows.py  server.py  ui.py
utils/: network.py  theme.py
