[project]
name = "webcamshare"
version = "0.1.0"
description = "Webcam sharing app"
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
    "opencv-python",
    "pyvirtualcam",
    "numpy",
    "requests",
    "customtkinter",
    "pillow",
    "pygrabber>=0.2",
]

[project.optional-dependencies]
dev = [
    "nuitka",
    "ordered-set",
    "zstandard",
]

[tool.uv]
